# ncode

./: .gitignore  AI_QUICK_REFERENCE.md  AI_SERVICE_INTEGRATION.md  AI_UPDATES_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_SUMMARY.md  FEATURE_ANALYSIS.js  FEATURE_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_CHECKLIST.md  INSTALLATION.md  LICENSE  LINUX_SETUP.md  MACOS_SETUP.md  QUICK_START.md  README.md  SCENARIO_FIXED.md  SETUP_GRPC.md  SETUP_HUB.md  TESTING_GRPC_GUIDE.md  TEST_REPORT.md  VALIDATION_REPORT.md  WINDOWS_SETUP.md  index.html  package-lock.json  package.json  setup-grpc.sh  test.js  tsconfig.json  vite.config.ts
.github/workflows/: workflow.yml
python-ai-service/: .env.example  README.md  __init__.py  ai_service.proto  ai_service_pb2.py  ai_service_pb2_grpc.py  config.py  hf_model_browser.py  hf_provider.py  local_model_downloader.py  local_model_provider.py  main.py  openai_compat_provider.py  prompts.py  rag_advanced.py  reasoning.py  requirements.txt  server.py  test_hf_model_browser.py  test_hf_model_browser_properties.py  test_local_model_provider.py  turbo_quant.py
scripts/: tauri-dev-server.mjs  tauri.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: grpc_client.rs  lib.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: fs_commands.rs  mod.rs  process_commands.rs  terminal_commands.rs
src-tauri/src/lsp/: mod.rs
src/components/: ErrorBoundary.tsx
src/store/: aiStore.inlineCompletion.test.ts  aiStore.properties.test.ts  aiStore.ts  editorStore.test.ts  editorStore.ts  reviewStore.test.ts  reviewStore.ts  specStore.ts  terminalStore.test.ts  terminalStore.ts  uiStore.ts
src/utils/: aiSuggestionParser.test.ts  aiSuggestionParser.ts  errorParser.ts  languageRunner.ts  os.ts  parseBugReport.ts  parseThinkingBlock.ts  projectScanner.ts  promptTemplateValidation.ts  workbenchActions.ts
(+109 files in other folders)
