[package]
name = "NCode"
version = "0.1.0"
description = "NCode - VS Code clone with AI"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
notify = "6.1"
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
